# caboose

./: .gitignore  Cargo.toml  README.md  experiment_prediction_impact.py  experiment_similarity_computation.py  minimal.ipynb  nbr_base.py  pernir-play.ipynb  pernir-show-effect.ipynb  pernir.py  pyproject.toml  pytest.ini  requirements.txt  test.py  tifu-bench.py  tifu-play-forget.ipynb  tifu-play.ipynb  tifu-show-effect.ipynb  tifuknn.py  upcfr-play.ipynb  upcfr-show-effect.ipynb
caboose_nbr/: evaluate_recommendation.py  metrics.py  nbr_base.py  pernir.py  tifuknn.py  upcfr.py
python_tests/: bench.py  test_bench.py  test_bench_forget.py  test_similarities.py
src/: index_builder.rs  lib.rs  main.rs  row_accumulator.rs  similar_user.rs  topk.rs  types.rs  user_similarity_index.rs  utils.rs
