[package]
name = "caboose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO give credit to
# https://github.com/bogliosimone/similaripy/blob/master/similaripy/cython_code/s_plus.pyx
# https://github.com/bogliosimone/similaripy/blob/master/similaripy/cython_code/s_plus.h

[dependencies]
sprs = "0.11"
